--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-fast-marquee": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "^20",
