--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@klinecharts/pro": "^0.1.1",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.2"
+    "react-fast-marquee": "^1.6.2",
+    "zingchart": "^2.9.13"
   },
   "devDependencies": {
     "@types/node": "^20",
