--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.2",
-    "recharts": "^2.10.3",
-    "zingchart": "^2.9.13"
+    "react-fast-marquee": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "^20",
