--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@klinecharts/pro": "^0.1.1",
+    "hamburger-react": "^2.5.0",
     "highcharts": "^11.2.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.2"
+    "react-fast-marquee": "^1.6.2",
+    "react-modern-drawer": "^1.2.2",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
