--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.12.0",
     "react-modern-drawer": "^1.2.2",
     "recharts": "^2.10.3"
   },
